# vive_rrcc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: DynReconf.cfg  offset
include/openvr_ros/: vr_interface.h
include/vive_bridge/: vive_interface.h  vive_node.h
include/vr_ros/: vr_interface.h  vr_node.h
launch/: vive_node.launch  vr.launch
msg/: TrackedDevicesStamped.msg
scripts/: launch.sh
src/: vive_interface.cpp  vive_node.cpp  vr_interface.cpp  vr_node.cpp
vive_bridge/: CMakeLists.txt  README.md
vive_bridge/cfg/: DynReconf.cfg  dynparam.yaml
vive_bridge/config/: dynparam.yaml  dynparam_2019-Apr-30_15:48:21.672942.yaml  dynparam_2019-Apr-30_16:37:03.011324.yaml  dynparam_2019-Apr-30_18:19:21.887478.yaml
vive_bridge/include/vive_bridge/: survive_interface.h  survive_types.h  vive_interface.h  vive_node.h
vive_bridge/launch/: survive_node.launch  vive_node.launch
vive_bridge/msg/: TrackedDevicesStamped.msg
vive_bridge/src/: survive_interface.cpp  vive_interface.cpp  vive_node.cpp
vive_bridge/srv/: GetTrackedDevices.srv
vive_calibrating/: CMakeLists.txt  README.md  package.xml
vive_calibrating/cfg/: DynReconf.cfg
vive_calibrating/include/: average.h  parkmartin_node.h  robot_interface.h  vive_robot_calibrating_node.h
vive_calibrating/launch/: ur_vive_node.launch  vive_node.launch
vive_calibrating/scripts/: calibrate.py  violin_plot.py
vive_calibrating/src/: cal_test.cpp  daniilidis.cpp  manual_calibrating_node.cpp  parkmartin_node.cpp  robot_interface.cpp  simple_calibrating_node.cpp  simple_calibration_test.cpp  test_ceres_se3.cpp  tool_calibrating_node.cpp  vive_calibrating_node.cpp  vive_robot_calibrating_node.cpp
vive_calibrating/srv/: AddSample.srv  ComputeCalibration.srv
vive_planning_scene/: CMakeLists.txt  package.xml
vive_planning_scene/include/: ceres_cost_functors.h
vive_planning_scene/include/vive_planning_scene/: sdf_interface.h  vive_scene_node.h
vive_planning_scene/src/: sdf_interface.cpp  vive_scene_node.cpp
vive_rrcc/: CMakeLists.txt  package.xml
