<?xml version="1.0"?>
<package format="2">
  <name>vive_rrcc</name>
  <version>0.1.0</version>
  <description>Collection of examples for the Thrivaldi thrivaldi.</description>
  <maintainer email="mortaas@stud.ntnu.no">Morten Andre Astad</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>rviz_visual_tools</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
